--- a/EmployeeManager/EmployeeManager.Web/Views/Employee/Index.cshtml
+++ b/EmployeeManager/EmployeeManager.Web/Views/Employee/Index.cshtml
@@ -5,7 +5,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width" />
-	<title>Index</title>
+	<title>Employee Manager</title>
 </head>
 <body>
 	<div class="container">
