Week 7 Add Navigation Menu
Add navigation menu to layout.

--- a/EmployeeManager/EmployeeManager.Web/Views/Shared/_Layout.cshtml
+++ b/EmployeeManager/EmployeeManager.Web/Views/Shared/_Layout.cshtml
@@ -9,22 +9,23 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Employee Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
-        </div>
-    </div>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="@Url.Action("Index", "Home")">Employee Manager</a>
+
+		<div>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="@Url.Action("Index", "Employee")">View All Employees</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="@Url.Action("Create", "Employee")">Create Employee</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
     <div class="container body-content">
         @RenderBody()
