--- a/EmployeeManager/EmployeeManager.Web/Content/Site.css
+++ b/EmployeeManager/EmployeeManager.Web/Content/Site.css
@@ -16,3 +16,14 @@ textarea {
     max-width: 280px;
 }
 
+.margin-top-md {
+	margin-top: 10px;
+}
+
+.margin-left-md {
+	margin-left: 15px;
+}
+
+.hidden {
+	display: none;
+}
