--- a/EmployeeManager/EmployeeManager.Web/Views/Shared/_Layout.cshtml
+++ b/EmployeeManager/EmployeeManager.Web/Views/Shared/_Layout.cshtml
@@ -23,19 +23,22 @@
 				<li class="nav-item">
 					<a class="nav-link" href="@Url.Action("Create", "Employee")">Create Employee</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="@Url.Action("Update", "Employee")">Update Employee</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Zachary Hayes</p>
-        </footer>
-    </div>
+	<div class="container body-content">
+		@RenderBody()
+		<hr />
+		<footer>
+			<p>&copy; @DateTime.Now.Year - Zachary Hayes</p>
+		</footer>
+	</div>
 
-    <script src="~/Scripts/jquery-3.0.0.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+	<script src="~/Scripts/jquery-3.0.0.min.js"></script>
+	<script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
