--- a/EmployeeManager/EmployeeManager.Web/Views/Employee/Index.cshtml
+++ b/EmployeeManager/EmployeeManager.Web/Views/Employee/Index.cshtml
@@ -16,7 +16,7 @@
 					<tr>
 						<th>Employee ID</th>
 						<th>First Name</th>
-						<th>Middle Name</th>
+						<th>Middle Initial</th>
 						<th>Last Name</th>
 						<th>Date Hired</th>
 						<th>Salary</th>
